2005-07-16  graydon hoare  <graydon@pobox.com>

	* cset.cc: Bugfixing, copy-on-write, attribute support.

2005-06-19  graydon hoare  <graydon@pobox.com>

	* cset.cc: Rewrite-in-progress on change_set.cc.

2005-06-14  Richard Levitte  <richard@levitte.org>

	* std_hooks.lua (get_preferred_merge2_command,
	get_preferred_merge3_command): EDITOR may be undefined.  In that
	case, os.getenv() returns nil, on which string.lower() chokes.
	It's much better to check for that and default to an empty
	string.

2005-06-11  Derek Scherger  <derek@echologic.com>

	* commands.cc (complete_command): log command expansion messages
	with L instead of P to reduce chatter
	(status): add --brief option and corresponding output
	(identify): add trailing space to comment gcc complains about
	* monotone.cc: fix comment typo and add additional details for
	command specific options
	* monotone.texi (Automation): list inventory status code
	combinations and descriptions
	* tests/t_status.at: new test of status command and --brief option
	* testsuite.at: add it

2005-06-11  Matt Johnston  <matt@ucc.asn.au>

	* commands.cc: revert should ignore the ignore hooks, otherwise bad
	things happen (revert a single ignored file, resultant empty ignore list
	reverts the whole working copy).
	* app_state.cc, app_state.hh: give set_restriction a flag to disregard
	file-ignore hooks.
	* tests/t_revert_restrict.at, testsuite.at: a test

2005-06-09  Riccardo Ghetta  <birrachiara@tin.it>

	* std_hooks.lua: make binary_file return nil on unreadable/empty files
	
2005-06-10  Joel Reed  <joelwreed@comcast.com>

	* commands.cc (CMD(cdiff)): Add OPT_DEPTH to command options.
	* t_restrictions.at: Add to testcase.

2005-06-09  Joel Reed  <joelwreed@comcast.com>

	* commands.cc (CMD(diff)): Add OPT_DEPTH back in, as it is used.
	* t_restrictions.at: Add to testcase to increase likelihood of 
	keeping it around :)

2005-06-10  Richard Levitte  <richard@levitte.org>
